--- a/app/styles/includes/_grey-section.scss
+++ b/app/styles/includes/_grey-section.scss
@@ -10,6 +10,9 @@
     .owl-dots {
       margin-top: 0;
     }
+    .owl-carousel {
+      margin-bottom: 0;
+    }
   }
 
   .with_background, hr {
