--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,90 +3,87 @@
 $icon-font-path: '../fonts/';
 
 // bower:scss
-@import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import 'bower_components/bootstrap-sass/assets/stylesheets/_bootstrap';
 // endbower
 
-@import "includes/fonts.scss";
+@import 'includes/fonts.scss';
 
-@import "includes/boot-overrides.scss";
-@import "includes/breadcrumbs.scss";
-@import "includes/pagination.scss";
-@import "includes/forms.scss";
-@import "includes/icons-forms.scss";
-@import "includes/carousel.scss";
-@import "includes/accordion.scss";
-@import "includes/progress-bars.scss";
-@import "includes/nav.scss";
-@import "includes/tabs.scss";
-@import "includes/vertical-tabs.scss";
-@import "includes/bs-buttons.scss";
-@import "includes/dropdown-menu.scss";
-@import "includes/v-margins-paddings.scss";
-@import "includes/vertical-alignmetn.scss";
-@import "includes/general.scss";
-@import "includes/lists.scss";
-@import "includes/btns.scss";
-@import "includes/parallax.scss";
-@import "includes/page-preloader.scss";
-@import "includes/animated.scss";
-@import "includes/boxed-layout.scss";
-@import "includes/ls-section.scss";
-@import "includes/grey-section.scss";
-@import "includes/dark-section.scss";
-@import "includes/color-section.scss";
-@import "includes/modal-search.scss";
-@import "includes/breadcrumbs2.scss";
-@import "includes/template-style.scss";
-@import "includes/flex-slider.scss";
-@import "includes/ipad-style.scss";
-@import "includes/mobile-style.scss";
-@import "includes/404.scss";
-@import "includes/about.scss";
-@import "includes/post-adds.scss";
-@import "includes/meta-blog.scss";
-@import "includes/blog.scss";
-@import "includes/mosaic.scss";
-@import "includes/entry-meta.scss";
-@import "includes/first-letter-in-blog.scss";
-@import "includes/blog-single.scss";
-@import "includes/events.scss";
-@import "includes/comments.scss";
-@import "includes/gallery.scss";
-@import "includes/shop.scss";
-@import "includes/sort-panel.scss";
-@import "includes/single-product.scss";
-@import "includes/cart.scss";
-@import "includes/chekcout.scss";
-@import "includes/shop-widgets.scss";
-@import "includes/jquery-ui.scss";
-@import "includes/widget-layered-nav.scss";
-@import "includes/widget-product.scss";
-@import "includes/widgets.scss";
-@import "includes/affix-aside.scss";
-@import "includes/widget-search.scss";
-@import "includes/widget-pages.scss";
-@import "includes/widget-tag-cloud.scss";
-@import "includes/widget-flickr.scss";
-@import "includes/widget-popular-entries.scss";
-@import "includes/widget-banner.scss";
-@import "includes/widget-slider.scss";
-@import "includes/widget-calendar.scss";
-@import "includes/widget-twitter.scss";
-@import "includes/widget-schedule.scss";
-@import "includes/teasers.scss";
-@import "includes/testimonials-carousel.scss";
-@import "includes/thumbnail.scss";
-@import "includes/price-tables.scss";
-@import "includes/contacts.scss";
-@import "includes/partners-carousel.scss";
-@import "includes/utilites.scss";
-@import "includes/alignment.scss";
-@import "includes/dividers.scss";
-@import "includes/item-meta.scss";
-@import "includes/icons.scss";
-@import "includes/plugins.scss";
-@import "includes/corporate-background-colors.scss";
-@import "includes/corporate-colors.scss";
-
-
+@import 'includes/boot-overrides';
+@import 'includes/breadcrumbs';
+@import 'includes/pagination';
+@import 'includes/forms';
+@import 'includes/icons-forms';
+@import 'includes/carousel';
+@import 'includes/accordion';
+@import 'includes/progress-bars';
+@import 'includes/nav';
+@import 'includes/tabs';
+@import 'includes/vertical-tabs';
+@import 'includes/bs-buttons';
+@import 'includes/dropdown-menu';
+@import 'includes/v-margins-paddings';
+@import 'includes/vertical-alignmetn';
+@import 'includes/general';
+@import 'includes/lists';
+@import 'includes/btns';
+@import 'includes/parallax';
+@import 'includes/page-preloader';
+@import 'includes/animated';
+@import 'includes/boxed-layout';
+@import 'includes/ls-section';
+@import 'includes/grey-section';
+@import 'includes/dark-section';
+@import 'includes/color-section';
+@import 'includes/modal-search';
+@import 'includes/breadcrumbs2';
+@import 'includes/template-style';
+@import 'includes/flex-slider';
+@import 'includes/ipad-style';
+@import 'includes/mobile-style';
+@import 'includes/404';
+@import 'includes/about';
+@import 'includes/post-adds';
+@import 'includes/meta-blog';
+@import 'includes/blog';
+@import 'includes/mosaic';
+@import 'includes/entry-meta';
+@import 'includes/blog-single';
+@import 'includes/events';
+@import 'includes/comments';
+@import 'includes/gallery';
+@import 'includes/shop';
+@import 'includes/sort-panel';
+@import 'includes/single-product';
+@import 'includes/cart';
+@import 'includes/chekcout';
+@import 'includes/shop-widgets';
+@import 'includes/jquery-ui';
+@import 'includes/widget-layered-nav';
+@import 'includes/widget-product';
+@import 'includes/widgets';
+@import 'includes/affix-aside';
+@import 'includes/widget-search';
+@import 'includes/widget-pages';
+@import 'includes/widget-tag-cloud';
+@import 'includes/widget-flickr';
+@import 'includes/widget-popular-entries';
+@import 'includes/widget-banner';
+@import 'includes/widget-slider';
+@import 'includes/widget-calendar';
+@import 'includes/widget-twitter';
+@import 'includes/widget-schedule';
+@import 'includes/teasers';
+@import 'includes/testimonials-carousel';
+@import 'includes/thumbnail';
+@import 'includes/price-tables';
+@import 'includes/contacts';
+@import 'includes/partners-carousel';
+@import 'includes/utilites';
+@import 'includes/alignment';
+@import 'includes/dividers';
+@import 'includes/item-meta';
+@import 'includes/icons';
+@import 'includes/plugins';
+@import 'includes/corporate-background-colors';
+@import 'includes/corporate-colors';
 
