edit styles after session

--- a/app/category.jade
+++ b/app/category.jade
@@ -4,6 +4,7 @@ block content
   // template sections
   include includes/common/_navigation
   include includes/common/_breadcrumbs
+  include includes/pages/category/_description
   include includes/pages/category/_service-items
   include includes/common/_contact-bg-white
   include includes/common/_callus
