--- a/app/includes/common/_breadcrumbs.jade
+++ b/app/includes/common/_breadcrumbs.jade
@@ -1,4 +1,4 @@
-section.page_breadcrumbs.ds.ms.section_padding_bottom_30
+section.page_breadcrumbs.ds.ms
   .container
     .row
       .col-sm-12.text-center
