--- a/app/includes/common/_contact-bg-white.jade
+++ b/app/includes/common/_contact-bg-white.jade
@@ -6,16 +6,16 @@ section.ls.section_padding_top_40.section_padding_bottom_15
           .teaser_icon.highlight.size_normal
             i.rt-icon2-location2
           h3 Адрес
-          p Barker st. 567, Los Angeles, CA, US
+          p.teaser__text Barker st. 567, Los Angeles, CA, US
       .col-sm-4
         .teaser.text-center
           .teaser_icon.highlight.size_normal
             i.rt-icon2-phone5
           h3 Телефон
-          p 8 (800) 168-2159, 8 (800) 156-5462
+          p.teaser__text 8 (800) 168-2159, 8 (800) 156-5462
       .col-sm-4
         .teaser.text-center
           .teaser_icon.highlight.size_normal
             i.rt-icon2-mail
           h3 Email
-          p info@company.com
+          p.teaser__text info@company.com
