--- a/app/includes/pages/object/itemObject.jade
+++ b/app/includes/pages/object/itemObject.jade
@@ -22,9 +22,9 @@ section.ls.ms.section_padding_50.columns_padding_25
             .entry-thumbnail.divider_40
               img(src='images/gallery/03.jpg', alt='')
         .entry-excerpt
-          p
+          p.block-single__text
             | Namber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
-        p
+        p.block-single__text
           | Lorem ipsum dolor sit amet, consetetur sadipscinged diam nonumy eirmod tempor invidunt utlabore dolore magna aliquyam erat, sed diam voluptua. At vero eoet accusam esto clitakasd gubergren nea takimata sanctus est lorem ipsum.
         // eof .col-sm-8 (main content)
         // sidebar
