--- a/app/newsItem.jade
+++ b/app/newsItem.jade
@@ -1,3 +1,10 @@
-//
-   Created by vet on 05.06.16.
+extends layouts/default
 
+block content
+  // template sections
+  include includes/common/_navigation
+  include includes/common/_breadcrumbs
+  include includes/pages/newsItem/news_item
+  include includes/common/_contact-bg-white
+  include includes/common/_callus
+  include includes/common/_copyright
