--- a/app/styles/includes/_blog-single.scss
+++ b/app/styles/includes/_blog-single.scss
@@ -62,6 +62,12 @@
   }
 }
 
+.block-single__text {
+  color: #000;
+}
+
+
+
 @media (min-width: 992px) {
   .author-meta .item-content {
     padding-left: 10px;
