--- a/app/styles/includes/_breadcrumbs.scss
+++ b/app/styles/includes/_breadcrumbs.scss
@@ -1,6 +1,6 @@
 /*breadcrumbs*/
 .breadcrumb {
-  margin: 0;
+  margin: 15px 0;
   padding: 0;
   background-color: transparent;
   border-radius: 0;
