--- a/app/styles/includes/_teasers.scss
+++ b/app/styles/includes/_teasers.scss
@@ -76,6 +76,10 @@
   }
 }
 
+.teaser__text {
+  color: #000;
+}
+
 @media (max-width: 500px) {
   .teaser {
     &[class*="_bg_color"], &[class*="with_"] {
