--- a/app/styles/includes/_widget-schedule.scss
+++ b/app/styles/includes/_widget-schedule.scss
@@ -11,3 +11,7 @@
 .widget_tabs .nav-tabs > li > a {
   padding: 10px 15px;
 }
+
+.widget_tabs .nav-tabs > li > a.nav-tabs__tab {
+  padding: 8px 3px;
+}
