--- a/app/includes/components/_bestsellers.jade
+++ b/app/includes/components/_bestsellers.jade
@@ -1,8 +1,24 @@
 .with_background.with_padding
-  .widget.widget_popular_entries
-    h3.widget-title Хиты продаж
-    ul.media-list.darklinks
-      +news-item('/item.html', 'images/recent_post1.jpg', '/item.html', 'Солнечная панель', '2 400 руб.')
-      +news-item('/item.html', 'images/recent_post2.jpg', '/item.html', 'Аккамулятор', '2 800 руб.')
-      +news-item('/item.html', 'images/recent_post1.jpg', '/item.html', 'Ветрогенератор', '1 400 руб.')
-      +news-item('/item.html', 'images/recent_post2.jpg', '/item.html', 'Контроллер', '5 450 руб.')
+  .widget.widget_tabs
+    ul.nav.nav-tabs(role='tablist')
+      li.active
+        a.nav-tabs__tab(href='#widget-tab4', role='tab', data-toggle='tab') Хиты продаж
+      li
+        a.nav-tabs__tab(href='#widget-tab5', role='tab', data-toggle='tab') Акции
+      li
+        a.nav-tabs__tab(href='#widget-tab6', role='tab', data-toggle='tab') Новинки
+    .tab-content.top-color-border.no-border
+      #widget-tab4.tab-pane.fade.in.active
+        +news-item('images/gallery/01.jpg', 'Товар 1', '3 200руб')
+        +news-item('images/gallery/02.jpg', 'Товар 2', '3 000руб')
+        +news-item('images/gallery/03.jpg', 'Товар 3', '1 000руб')
+      // eof tab
+      #widget-tab5.tab-pane.fade
+        +news-item('images/gallery/04.jpg', 'Товар 1', '3 200руб')
+        +news-item('images/gallery/05.jpg', 'Товар 2', '3 000руб')
+        +news-item('images/gallery/06.jpg', 'Товар 3', '1 000руб')
+      // eof tab
+      #widget-tab6.tab-pane.fade
+        +news-item('images/gallery/07.jpg', 'Товар 1', '3 200руб')
+        +news-item('images/gallery/08.jpg', 'Товар 2', '3 000руб')
+        +news-item('images/gallery/09.jpg', 'Товар 3', '1 000руб')
