--- a/app/includes/pages/newsItem/news_item.jade
+++ b/app/includes/pages/newsItem/news_item.jade
@@ -1,2 +1,31 @@
-
-
+include ../../mixins/mixins
+section.ls.ms.section_padding_top_50.section_padding_bottom_50.columns_padding_25
+  .container
+    .row
+      .col-sm-7.col-md-8.col-lg-8
+        article.event-single.muted_background
+          .item-media.entry-thumbnail.bottommargin_40
+            img(src='images/gallery/01.jpg', alt='')
+          .item-content
+            header.entry-header
+              .entry-meta.item-meta
+                span.categories-links
+                  a.theme_button.small_button.color1(rel='category', href='blog-right.html') Category 1
+                span.author.darktext Автор
+                span.date
+                  time.entry-date(datetime='2016-01-10T15:05:23+00:00')
+                    | Jan 10, 2016
+              // .entry-meta
+              h1.entry-title
+                a(href='event-single-right.html', rel='bookmark') Новость
+            // .entry-header
+            .entry-content
+              p.big-first-letter.darktext
+                | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut  wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
+              p.darktext
+                | Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, velillum dolore eu feugiat
+                |  nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. At vero eos et accusam et justo duo.
+            // .entry-content
+          // .item-content
+      .col-sm-5.col-md-4.col-lg-4
+        include ../../components/_bestsellers
