--- a/app/styles/includes/_plugins.scss
+++ b/app/styles/includes/_plugins.scss
@@ -543,6 +543,7 @@ html[xmlns] .slides {
   width: 100%;
   position: absolute;
   bottom: 42px;
+  left: 42px;
   text-align: center;
   z-index: 10;
   li {
