--- a/app/includes/common/_navigation.jade
+++ b/app/includes/common/_navigation.jade
@@ -1,14 +1,14 @@
 header.page_header.header_white.floating_logo.columns_padding_0.table_section
-  .container-fluid
+  .container
     .row
-      .col-md-2.col-xs-4
+      .col-md-4.col-xs-10
         a.logo.logo_image(href='index.html')
           img(src='images/logo.png', alt='EN-SALE')
         span.logo-meta
           strong.grey +7(999)999-999
           br
           | en-sale@mail.ru
-      .col-md-8.col-lg-8.text-center
+      .col-md-6.col-xs-2.text-center
         // main nav start
         nav.mainmenu_wrapper
           ul.mainmenu.nav.sf-menu
@@ -26,4 +26,3 @@ header.page_header.header_white.floating_logo.columns_padding_0.table_section
         // eof main nav
         span.toggle_menu
           span
-      .col-md-2.col-lg-4.text-right
