edit ipad style

--- a/app/styles/includes/_ipad-style.scss
+++ b/app/styles/includes/_ipad-style.scss
@@ -227,8 +227,8 @@
 
 .toggle_menu {
   position: absolute;
-  top: 0;
-  left: 50%;
+  top: -70px;
+  left: 90%;
   margin-left: -30px;
   display: none;
   width: 60px;
